<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathan.inventoryassistant.ScanInItem">

    <TextView android:text="@string/grp_name_here" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:id="@+id/textView1"
        android:textSize="25sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupName"
        android:textSize="25sp"
        android:hint="enter item name here"
        android:layout_below="@+id/textView1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_tag"
        android:id="@+id/ScanTag"
        android:background="#FFFF00"
        android:onClick="makeNewGroup"
        android:layout_below="@+id/groupName"
        android:layout_toEndOf="@+id/textView1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:id="@+id/button"
        android:background="#008000"
        android:layout_below="@+id/ScanTag"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/button2"
        android:background="#0000FF"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
